assets/style/scorecard.scss
$body-bg: #fff;
$text-color: #000;

$grid-gutter-width: 4px;
$table-cell-padding: 4px;

$table-bg: #fff;
$table-bg-accent: #e6e6e6;
$font-size-base: 1rem;

$print-page-size: letter;

@import "~bootstrap/scss/bootstrap";

.scores {
  @extend .table;
  @extend .table-bordered;
}

.logo {
  padding-top:10px;
  padding-bottom: 10px;
}

.banners {
  margin: 0 auto;
  padding-bottom: 10px;
}

.banners img {
  margin: 0 auto;
}

.scorecard-scores {
    height: 3in;
    font-size: 14px;
}

.scorecard-page {
    height: 5in;
    page-break-after: always;
}

.scorecard-brand {
    text-align: center;
}

.scorecard-game-meta {
    text-align: right;
}

.scores-player {
    height: 36px;
}

.scores-player td {
    vertical-align: middle;
}

